tests/errors/scalar_body_new_no_self.dang
# self is not available inside a scalar's new() hook: no value exists yet.
scalar Slug {
  new(raw: String!) {
    self :: String!
  }
}
